--- a/.github/workflows/code-check.yml
+++ b/.github/workflows/code-check.yml
@@ -25,6 +25,7 @@ jobs:
       - name: Lint
         run: yarn eslint
       - name: Test
-        run: yarn Test
-      - name: Build
-        run: yarn build
+        run: yarn test
+  build:
+    - name: Build
+      run: yarn build
