--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "tsc ",
+    "publish:prepare": "node scripts/publish",
     "code-check": "yarn format && yarn typecheck && yarn lint",
     "typecheck": "tsc --noEmit",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "format": "prettier \"./**/*.{js,jsx,json,ts,tsx}\"",
     "test": "jest __tests__/*.test.* --env=jsdom --verbose --runInBand"
   },
+  "license": "MIT",
   "dependencies": {
     "use-sync-external-store": "^1.2.0"
   },
   "devDependencies": {
-    "husky": "^8.0.1",
     "@babel/core": "^7.12.0",
     "@babel/preset-env": "^7.19.0",
     "@babel/preset-react": "7.18.6",
@@ -43,6 +44,7 @@
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.5.0",
     "eslint-plugin-unicorn": "40.1.0",
+    "husky": "^8.0.1",
     "jest": "29.0.2",
     "jest-environment-jsdom": "^29.0.2",
     "parcel": "^2.7.0",
@@ -51,6 +53,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-test-renderer": "^18.2.0",
+    "rollup": "^3.1.0",
+    "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "29.0.0",
     "typescript": "4.8.3"
   },
