added rollup bundler

--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
   "author": "samuel.gjabel@gmail.com",
+  "license": "MIT",
   "main": "lib/index.js",
   "scripts": {
-    "build": "tsc ",
+    "ts:build": "tsc ",
+    "build": "concurrently -m 8 'yarn:build:*' && node scripts/copy-data.mjs",
+    "build:cjs": "rollup -c --bundleConfigAsCjs --format=cjs && rm -rf lib/cjs/node_modules && rm -rf lib/cjs/_virtual",
+    "build:esm": "rollup -c --bundleConfigAsCjs --format=esm && rm -rf lib/esm/node_modules && rm -rf lib/esm/_virtual",
+    "build:umd": "rollup -c --bundleConfigAsCjs --format=umd && rm -rf lib/umd/node_modules && rm -rf lib/umd/_virtual",
+    "build:types": "rollup -c --bundleConfigAsCjs --format=types && rm -rf lib/types/index.js",
     "publish:prepare": "node scripts/publish",
     "code-check": "yarn format && yarn typecheck && yarn lint",
     "typecheck": "tsc --noEmit",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "format": "prettier \"./**/*.{js,jsx,json,ts,tsx}\"",
+    "format": "prettier --write \"./**/*.{js,jsx,json,ts,tsx}\"",
     "test": "jest __tests__/*.test.* --env=jsdom --verbose --runInBand"
   },
-  "license": "MIT",
   "dependencies": {
     "use-sync-external-store": "^1.2.0"
   },
@@ -18,9 +23,12 @@
     "@babel/core": "^7.12.0",
     "@babel/preset-env": "^7.19.0",
     "@babel/preset-react": "7.18.6",
-    "@parcel/compressor-brotli": "^2.7.0",
-    "@parcel/compressor-gzip": "^2.7.0",
-    "@parcel/config-default": "^2.7.0",
+    "@rollup/plugin-alias": "^3.1.5",
+    "@rollup/plugin-babel": "^5.0.0",
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
+    "@rollup/plugin-replace": "^2.3.2",
+    "@rollup/plugin-typescript": "^9.0.1",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/react-hooks": "^8.0.1",
@@ -40,20 +48,23 @@
     "@typescript-eslint/parser": "5.29.0",
     "babel-jest": "^29.0.2",
     "babel-plugin-module-resolver": "^4.1.0",
+    "concurrently": "^7.4.0",
+    "esbuild": "^0.15.10",
     "eslint": "7.32.0",
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.5.0",
     "eslint-plugin-unicorn": "40.1.0",
+    "fs-extra": "^10.1.0",
     "husky": "^8.0.1",
     "jest": "29.0.2",
     "jest-environment-jsdom": "^29.0.2",
-    "parcel": "^2.7.0",
     "prettier": "2.7.1",
     "process": "^0.11.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-test-renderer": "^18.2.0",
     "rollup": "^3.1.0",
+    "rollup-plugin-esbuild": "^4.10.1",
     "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "29.0.0",
     "typescript": "4.8.3"
