--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "module": "CommonJS",
+    "module": "ESNext",
     "outDir": "lib",
     "incremental": false,
     "declaration": true,
