--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
     types: [opened, synchronize]
 
 jobs:
-  code-check:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
