--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "version": "0.0.1",
   "author": "samuel.gjabel@gmail.com",
   "license": "MIT",
   "main": "lib/index.js",
@@ -26,7 +27,7 @@
     "@rollup/plugin-alias": "^3.1.5",
     "@rollup/plugin-babel": "^5.0.0",
     "@rollup/plugin-commonjs": "^11.1.0",
-    "@rollup/plugin-node-resolve": "^7.1.3",
+    "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-replace": "^2.3.2",
     "@rollup/plugin-typescript": "^9.0.1",
     "@testing-library/jest-dom": "5.16.5",
