--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     "downlevelIteration": true,
     "sourceMap": false
   },
-  "include": ["src"]
+  "include": ["packages/core", "packages/babel-transform"]
 }
