update babel transform to work with react plugins

--- a/packages/babel-transform/package.json
+++ b/packages/babel-transform/package.json
@@ -11,8 +11,7 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@babel/core": "^7.20.2",
-    "use-sync-external-store": "^1.2.0"
+    "@babel/core": "^7.20.2"
   },
   "peerDependencies": {
     "react": ">=16.8"
