--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "eslint-plugin-unicorn": "40.1.0",
     "fs-extra": "^10.1.0",
     "husky": "^8.0.1",
+    "immer": "^9.0.16",
     "jest": "29.0.2",
     "jest-environment-jsdom": "^29.0.2",
     "prettier": "2.7.1",
