--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "immer": "^9.0.16",
     "jest": "29.0.2",
     "jest-environment-jsdom": "^29.0.2",
+    "metro-react-native-babel-preset": "^0.73.3",
     "prettier": "2.7.1",
     "process": "^0.11.10",
     "react": "18.2.0",
