--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oustate",
-  "version": "0.1.1",
+  "version": "1.0.0",
   "author": "samuel.gjabel@gmail.com",
   "description": "👀 Another React state management library",
   "license": "MIT",
@@ -18,7 +18,7 @@
     "build:umd": "rollup -c --bundleConfigAsCjs --format=umd && rm -rf lib/umd/node_modules && rm -rf lib/umd/_virtual",
     "build:types": "rollup -c --bundleConfigAsCjs --format=types && rm -rf lib/types/index.js",
     "publish:prepare": "node scripts/publish",
-    "code-check": "bun run format && bun run typecheck && bun run lint",
+    "code-check": "bun run format && bun run typecheck && bun run lint && bun run test",
     "typecheck": "tsc --noEmit",
     "lint": "bun eslint \"packages/**/*.{ts,tsx}\" --fix",
     "format": "prettier --write \"./**/*.{js,jsx,json,ts,tsx}\"",
@@ -36,6 +36,10 @@
     "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.8.0",
     "@happy-dom/global-registrator": "^15.11.6",
+    "@rollup/plugin-commonjs": "^28.0.1",
+    "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-replace": "^6.0.1",
+    "@rollup/plugin-typescript": "^12.1.1",
     "@stylistic/eslint-plugin": "^2.9.0",
     "@stylistic/eslint-plugin-jsx": "^2.9.0",
     "@stylistic/eslint-plugin-ts": "^2.9.0",
@@ -72,6 +76,8 @@
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "react-test-renderer": "18.2.0",
+    "rollup": "^4.26.0",
+    "rollup-plugin-terser": "^7.0.2",
     "tailwindcss": "^3.4.7",
     "ts-jest": "^29.2.3",
     "ts-node": "10.9.2",
