--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,14 +10,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v4
+
+      - uses: oven-sh/setup-bun@v2
         with:
-          node-version: '14'
-          cache: yarn
+          bun-version: latest
+
       - run: git fetch origin "$BASE_COMMIT_SHA"
-      - name: Install dependencies 
-        run: yarn install --frozen-lockfile --check-files
+      
+      - name: Install dependencies
+        run: bun install
+
       - name: Build
-        run: yarn build
-    
+        run: bun run build
