--- a/.github/workflows/code-check.yml
+++ b/.github/workflows/code-check.yml
@@ -1,4 +1,4 @@
-name: Code check
+name: Code Check with Bun
 
 on:
   push:
@@ -10,20 +10,25 @@ jobs:
   code-check:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v4
+
+      - uses: oven-sh/setup-bun@v2
         with:
-          node-version: '14'
-          cache: yarn
+          bun-version: latest
+
       - run: git fetch origin "$BASE_COMMIT_SHA"
+      
       - name: Install dependencies 
-        run: yarn install --frozen-lockfile --check-files
+        run: bun install
+
       - name: Format code
-        run: yarn format
+        run: bun run format
+
       - name: Type check
-        run: yarn typecheck
+        run: bun run typecheck
+
       - name: Lint
-        run: yarn eslint
+        run: bun run lint
+
       - name: Test
-        run: yarn test
-    
+        run: bun run test
