--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "oustate",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "author": "samuel.gjabel@gmail.com",
   "description": "👀 Another React state management library",
   "license": "MIT",
-  "main": "lib/cjs/index.js",
-  "module": "lib/esm/index.js",
-  "react-native": "lib/src/index.ts",
-  "types": "lib/types/index.d.ts",
+  "main": "cjs/index.js",
+  "module": "esm/index.js",
+  "react-native": "src/index.ts",
+  "types": "types/index.d.ts",
   "homepage": "https://github.com/samuelgjabel/oustate",
   "repository": "https://github.com/samuelgjabel/oustate",
   "sideEffects": false,
